--- a/DANIEL/AAF/Oroklodes/Oroklodes/Oroklodes.csproj
+++ b/DANIEL/AAF/Oroklodes/Oroklodes/Oroklodes.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IArlap.cs" />
+    <Compile Include="Kave.cs" />
+    <Compile Include="Pekseg.cs" />
     <Compile Include="Peksutemeny.cs" />
     <Compile Include="Pogacsa.cs" />
     <Compile Include="Program.cs" />
