--- a/DANIEL/IKT/Formula-1 Projekt/Formula-1 Projekt/Formula-1 Projekt.csproj
+++ b/DANIEL/IKT/Formula-1 Projekt/Formula-1 Projekt/Formula-1 Projekt.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Nagydij.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortableBindingList.cs" />
     <Compile Include="Versenyzo.cs" />
   </ItemGroup>
   <ItemGroup>
